#491884 by ayalon: Provide blank substitutions for optional contexts that do not appear.
Allow the string argument to accept the entire path tail.
#578410: Search path override, plus search form and search result content types.
#567778: Allow override of contact and user contact pages.
Allow override of blog and user blog pages.
Allow override of poll page.

ctools 6.x-1.x-dev
==================

Fix problem with ctools_set_page_token()
Add a couple of support functions for ctools_set_page_token that are meant to be used by themes.
#563916 by Damien Tournoud: ajax before() operation not using behaviors correctly.
#553112: dependent.js failed to set proper initial state if inside an already hidden element.
#569508 by markus_petrux: Update user_profile content type.
#558942 by Roi Danton: In wizard.inc, be sure to check cancel path if return path is not set, as noted in documentation.
#568578 by Roger Lopez: Add client side redirect AJAX command.
#561788 by sirkitree: Add client side reload AJAX command.
#566256 by mikl: HTML safe converter for string context.
#558856 by sdboyer: Allow Views Panes to mark contexts optional.
#558902 by Roi Danton: Better documentation of how to handle the back button with wizard.inc.
#565808 by sirkitree: Replace /nojs/g instead of just "/nojs/" with ajax, allowing nojs to be the last item in a URL.
#564522 by Roger Lopez: Prevent accidental inclusion of .info files in plugins.
#558918: Collapsible can be set to remember state between page loads. Allow collapsible handle and content to be separated and not have to be divs.
#545208: Page cache needs to be cleared when page manager pages are saved.
#577542 by EclipseGC: Add footer message as a page element.
#581670: Fix autocomplete in the modal so that using it does not submit the form.
#580342: Fix Page Manager variant import, which did not work at all.
#589342: Introduce page_manager_get_current_page() to get information about the current page manager page.