@@ -14,6 +14,7 @@ API version 1.1.1:
   Introduce ctools_ajax_command_reload().
   Introduce ctools_ajax_command_submit().
   Introduce ctools_static().
+  Introduce ctools_modal_command_loading().
 
 API version 1.1.0:
   delegator module destroyed, replaced by page manager. All 'task' and 'task_handler' plugins 
